--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as dt\n",
     "import pytz\n",
     "\n",
-    "def create_study_plan(service, subjects, calendar_id=\"primary\"):\n",
+    "def create_study_plan(service, subjects, num_days, calendar_id=\"primary\"):\n",
     "    \n",
     "    START_TIME = dt.time(9, 0)\n",
     "    END_TIME = dt.time(18, 30)\n",
@@ -90,7 +90,6 @@
     "\n",
     "    now = dt.datetime.now(pytz.timezone('Europe/London'))\n",
     "    current_date = now.date()\n",
-    "    num_days = 3  # Number of days to generate study plan for\n",
     "    study_dates = [current_date + dt.timedelta(days=i) for i in range(num_days)]\n",
     "    \n",
     "    total_weight = sum(subjects.values())\n",
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,74 +191,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted overlapping event: Maths from 2024-04-03T16:31:58Z to 2024-04-03T17:11:58Z.\n",
-      "Total available blocks: 1\n",
-      "Number of blocks per subject:\n",
-      "Maths: 1 blocks\n",
-      "Physics: 0 blocks\n",
-      "Computer Science: 0 blocks\n",
-      "Added Maths study block from 2024-04-03 17:33:47.475121+01:00 to 2024-04-03 18:13:47.475121+01:00.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T08:00:00Z to 2024-04-04T08:40:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T08:45:00Z to 2024-04-04T09:25:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T09:30:00Z to 2024-04-04T10:10:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T10:15:00Z to 2024-04-04T10:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T10:22:42Z to 2024-04-04T11:02:42Z.\n",
       "Deleted overlapping event: Maths from 2024-04-04T11:45:00Z to 2024-04-04T12:25:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-04T12:30:00Z to 2024-04-04T13:10:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-04T13:15:00Z to 2024-04-04T13:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T13:15:00Z to 2024-04-04T13:55:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-04T14:00:00Z to 2024-04-04T14:40:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-04T14:45:00Z to 2024-04-04T15:25:00Z.\n",
       "Deleted overlapping event: Computer Science from 2024-04-04T15:30:00Z to 2024-04-04T16:10:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-04T16:15:00Z to 2024-04-04T16:55:00Z.\n",
-      "Total available blocks: 12\n",
+      "Total available blocks: 9\n",
       "Number of blocks per subject:\n",
-      "Maths: 7 blocks\n",
-      "Physics: 3 blocks\n",
-      "Computer Science: 2 blocks\n",
-      "Added Maths study block from 2024-04-04 09:00:00+01:00 to 2024-04-04 09:40:00+01:00.\n",
-      "Added Maths study block from 2024-04-04 09:45:00+01:00 to 2024-04-04 10:25:00+01:00.\n",
-      "Added Maths study block from 2024-04-04 10:30:00+01:00 to 2024-04-04 11:10:00+01:00.\n",
-      "Added Maths study block from 2024-04-04 11:15:00+01:00 to 2024-04-04 11:55:00+01:00.\n",
+      "Maths: 5 blocks\n",
+      "Physics: 2 blocks\n",
+      "Computer Science: 1 blocks\n",
+      "Added Maths study block from 2024-04-04 11:31:25.000477+01:00 to 2024-04-04 12:11:25.000477+01:00.\n",
       "Added Maths study block from 2024-04-04 12:45:00+01:00 to 2024-04-04 13:25:00+01:00.\n",
       "Added Maths study block from 2024-04-04 13:30:00+01:00 to 2024-04-04 14:10:00+01:00.\n",
-      "Added Physics study block from 2024-04-04 14:15:00+01:00 to 2024-04-04 14:55:00+01:00.\n",
+      "Added Maths study block from 2024-04-04 14:15:00+01:00 to 2024-04-04 14:55:00+01:00.\n",
       "Added Physics study block from 2024-04-04 15:00:00+01:00 to 2024-04-04 15:40:00+01:00.\n",
       "Added Physics study block from 2024-04-04 15:45:00+01:00 to 2024-04-04 16:25:00+01:00.\n",
       "Added Computer Science study block from 2024-04-04 16:30:00+01:00 to 2024-04-04 17:10:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-04 17:15:00+01:00 to 2024-04-04 17:55:00+01:00.\n",
       "Deleted overlapping event: Maths from 2024-04-05T08:00:00Z to 2024-04-05T08:40:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-05T08:45:00Z to 2024-04-05T09:25:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-05T09:30:00Z to 2024-04-05T10:10:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-05T10:15:00Z to 2024-04-05T10:55:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T11:45:00Z to 2024-04-05T12:25:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T12:30:00Z to 2024-04-05T13:10:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-05T13:15:00Z to 2024-04-05T13:55:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-05T14:00:00Z to 2024-04-05T14:40:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-05T14:45:00Z to 2024-04-05T15:25:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-05T15:30:00Z to 2024-04-05T16:10:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-05T16:15:00Z to 2024-04-05T16:55:00Z.\n",
-      "Total available blocks: 12\n",
-      "Number of blocks per subject:\n",
-      "Maths: 7 blocks\n",
-      "Physics: 3 blocks\n",
-      "Computer Science: 2 blocks\n",
-      "Added Maths study block from 2024-04-05 09:00:00+01:00 to 2024-04-05 09:40:00+01:00.\n",
-      "Added Maths study block from 2024-04-05 09:45:00+01:00 to 2024-04-05 10:25:00+01:00.\n",
-      "Added Maths study block from 2024-04-05 10:30:00+01:00 to 2024-04-05 11:10:00+01:00.\n",
-      "Added Maths study block from 2024-04-05 11:15:00+01:00 to 2024-04-05 11:55:00+01:00.\n",
-      "Added Maths study block from 2024-04-05 12:45:00+01:00 to 2024-04-05 13:25:00+01:00.\n",
-      "Added Maths study block from 2024-04-05 13:30:00+01:00 to 2024-04-05 14:10:00+01:00.\n",
-      "Added Physics study block from 2024-04-05 14:15:00+01:00 to 2024-04-05 14:55:00+01:00.\n",
-      "Added Physics study block from 2024-04-05 15:00:00+01:00 to 2024-04-05 15:40:00+01:00.\n",
-      "Added Physics study block from 2024-04-05 15:45:00+01:00 to 2024-04-05 16:25:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-05 16:30:00+01:00 to 2024-04-05 17:10:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-05 17:15:00+01:00 to 2024-04-05 17:55:00+01:00.\n"
+      "Deleted overlapping event: Maths from 2024-04-05T11:45:00Z to 2024-04-05T12:25:00Z.\n"
      ]
     }
    ],
@@ -267,7 +229,7 @@
     "service = authenticate_google_calendar()\n",
     "\n",
     "subjects = {'Maths': 150, 'Physics': 100, 'Computer Science': 70}  # Example subjects with weights\n",
-    "create_study_plan(service, subjects, calendar_id)  # Specify your calendar ID\n"
+    "create_study_plan(service=service, subjects=subjects, num_days=2, calendar_id=calendar_id)  # Specify your calendar ID\n"
    ]
   }
  ],
