--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,37 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted overlapping event: Maths from 2024-04-04T10:22:42Z to 2024-04-04T11:02:42Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T11:45:00Z to 2024-04-04T12:25:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T12:30:00Z to 2024-04-04T13:10:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-04T13:15:00Z to 2024-04-04T13:55:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-04T14:00:00Z to 2024-04-04T14:40:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-04T14:45:00Z to 2024-04-04T15:25:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-04T15:30:00Z to 2024-04-04T16:10:00Z.\n",
-      "Total available blocks: 9\n",
+      "Total available blocks: 1\n",
       "Number of blocks per subject:\n",
-      "Maths: 5 blocks\n",
-      "Physics: 2 blocks\n",
-      "Computer Science: 1 blocks\n",
-      "Added Maths study block from 2024-04-04 11:31:25.000477+01:00 to 2024-04-04 12:11:25.000477+01:00.\n",
-      "Added Maths study block from 2024-04-04 12:45:00+01:00 to 2024-04-04 13:25:00+01:00.\n",
-      "Added Maths study block from 2024-04-04 13:30:00+01:00 to 2024-04-04 14:10:00+01:00.\n",
-      "Added Maths study block from 2024-04-04 14:15:00+01:00 to 2024-04-04 14:55:00+01:00.\n",
-      "Added Physics study block from 2024-04-04 15:00:00+01:00 to 2024-04-04 15:40:00+01:00.\n",
-      "Added Physics study block from 2024-04-04 15:45:00+01:00 to 2024-04-04 16:25:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-04 16:30:00+01:00 to 2024-04-04 17:10:00+01:00.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T08:00:00Z to 2024-04-05T08:40:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T08:45:00Z to 2024-04-05T09:25:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T09:30:00Z to 2024-04-05T10:10:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T10:15:00Z to 2024-04-05T10:55:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-05T11:45:00Z to 2024-04-05T12:25:00Z.\n"
+      "Maths: 1 blocks\n",
+      "Physics: 0 blocks\n",
+      "Computer Science: 0 blocks\n",
+      "Added Maths study block from 2024-04-11 17:36:13.085712+01:00 to 2024-04-11 18:16:13.085712+01:00.\n"
      ]
     }
    ],
@@ -229,7 +211,7 @@
     "service = authenticate_google_calendar()\n",
     "\n",
     "subjects = {'Maths': 150, 'Physics': 100, 'Computer Science': 70}  # Example subjects with weights\n",
-    "create_study_plan(service=service, subjects=subjects, num_days=2, calendar_id=calendar_id)  # Specify your calendar ID\n"
+    "create_study_plan(service=service, subjects=subjects, num_days=1, calendar_id=calendar_id)  # Specify your calendar ID\n"
    ]
   }
  ],
