--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,19 +191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total available blocks: 1\n",
+      "Deleted overlapping event: Physics from 2024-04-12T09:22:33Z to 2024-04-12T10:02:33Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-12T10:07:33Z to 2024-04-12T10:47:33Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-12T10:52:33Z to 2024-04-12T11:32:33Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-12T12:30:00Z to 2024-04-12T13:10:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-12T13:15:00Z to 2024-04-12T13:55:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-12T14:00:00Z to 2024-04-12T14:40:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-12T14:45:00Z to 2024-04-12T15:25:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-12T15:30:00Z to 2024-04-12T16:10:00Z.\n",
+      "Total available blocks: 11\n",
       "Number of blocks per subject:\n",
-      "Maths: 1 blocks\n",
-      "Physics: 0 blocks\n",
-      "Computer Science: 0 blocks\n",
-      "Added Maths study block from 2024-04-11 17:36:13.085712+01:00 to 2024-04-11 18:16:13.085712+01:00.\n"
+      "Maths: 5 blocks\n",
+      "Physics: 3 blocks\n",
+      "Computer Science: 2 blocks\n",
+      "Added Maths study block from 2024-04-12 10:13:55.137353+01:00 to 2024-04-12 10:53:55.137353+01:00.\n",
+      "Added Maths study block from 2024-04-12 10:58:55.137353+01:00 to 2024-04-12 11:38:55.137353+01:00.\n",
+      "Added Maths study block from 2024-04-12 11:43:55.137353+01:00 to 2024-04-12 12:23:55.137353+01:00.\n",
+      "Added Maths study block from 2024-04-12 12:45:00+01:00 to 2024-04-12 13:25:00+01:00.\n",
+      "Added Physics study block from 2024-04-12 13:30:00+01:00 to 2024-04-12 14:10:00+01:00.\n",
+      "Added Physics study block from 2024-04-12 14:15:00+01:00 to 2024-04-12 14:55:00+01:00.\n",
+      "Added Physics study block from 2024-04-12 15:00:00+01:00 to 2024-04-12 15:40:00+01:00.\n",
+      "Added Computer Science study block from 2024-04-12 15:45:00+01:00 to 2024-04-12 16:25:00+01:00.\n",
+      "Added Computer Science study block from 2024-04-12 16:30:00+01:00 to 2024-04-12 17:10:00+01:00.\n"
      ]
     }
    ],
