switch back to matplotlib

--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,9 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total available blocks: 6\n",
+      "Number of blocks per subject:\n",
+      "Maths: 4 blocks\n",
+      "Physics: 1 blocks\n",
+      "Computer Science: 1 blocks\n",
+      "Added Maths study block from 2024-04-16 16:33:12.936484+01:00 to 2024-04-16 17:13:12.936484+01:00.\n",
+      "Added Maths study block from 2024-04-16 17:18:12.936484+01:00 to 2024-04-16 17:58:12.936484+01:00.\n",
+      "Added Maths study block from 2024-04-16 18:03:12.936484+01:00 to 2024-04-16 18:43:12.936484+01:00.\n",
+      "Added Maths study block from 2024-04-16 18:48:12.936484+01:00 to 2024-04-16 19:28:12.936484+01:00.\n",
+      "Added Physics study block from 2024-04-16 19:33:12.936484+01:00 to 2024-04-16 20:13:12.936484+01:00.\n",
+      "Added Computer Science study block from 2024-04-16 20:18:12.936484+01:00 to 2024-04-16 20:58:12.936484+01:00.\n"
+     ]
+    }
+   ],
    "source": [
     "service = authenticate_google_calendar()\n",
     "\n",
