--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "def create_study_plan(service, subjects, num_days, calendar_id=\"primary\"):\n",
     "    \n",
     "    START_TIME = dt.time(9, 0)\n",
-    "    END_TIME = dt.time(21, 30)\n",
+    "    END_TIME = dt.time(21 , 30)\n",
     "    \n",
     "    def delete_overlapping_events(start_time, end_time):\n",
     "        \"\"\"Deletes events in the study plan that overlap with the given time range.\"\"\"\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,24 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total available blocks: 6\n",
+      "Deleted overlapping event: Maths from 2024-04-16T17:57:27Z to 2024-04-16T18:37:27Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-16T18:42:27Z to 2024-04-16T19:22:27Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-16T19:27:27Z to 2024-04-16T20:07:27Z.\n",
+      "Total available blocks: 3\n",
       "Number of blocks per subject:\n",
-      "Maths: 4 blocks\n",
-      "Physics: 1 blocks\n",
-      "Computer Science: 1 blocks\n",
-      "Added Maths study block from 2024-04-16 16:33:12.936484+01:00 to 2024-04-16 17:13:12.936484+01:00.\n",
-      "Added Maths study block from 2024-04-16 17:18:12.936484+01:00 to 2024-04-16 17:58:12.936484+01:00.\n",
-      "Added Maths study block from 2024-04-16 18:03:12.936484+01:00 to 2024-04-16 18:43:12.936484+01:00.\n",
-      "Added Maths study block from 2024-04-16 18:48:12.936484+01:00 to 2024-04-16 19:28:12.936484+01:00.\n",
-      "Added Physics study block from 2024-04-16 19:33:12.936484+01:00 to 2024-04-16 20:13:12.936484+01:00.\n",
-      "Added Computer Science study block from 2024-04-16 20:18:12.936484+01:00 to 2024-04-16 20:58:12.936484+01:00.\n"
+      "Maths: 3 blocks\n",
+      "Physics: 0 blocks\n",
+      "Computer Science: 0 blocks\n",
+      "Added Maths study block from 2024-04-16 19:11:15.868266+01:00 to 2024-04-16 19:51:15.868266+01:00.\n",
+      "Added Maths study block from 2024-04-16 19:56:15.868266+01:00 to 2024-04-16 20:36:15.868266+01:00.\n",
+      "Added Maths study block from 2024-04-16 20:41:15.868266+01:00 to 2024-04-16 21:21:15.868266+01:00.\n"
      ]
     }
    ],
