--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,24 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted overlapping event: Maths from 2024-04-16T17:57:27Z to 2024-04-16T18:37:27Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-16T18:42:27Z to 2024-04-16T19:22:27Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-16T19:27:27Z to 2024-04-16T20:07:27Z.\n",
-      "Total available blocks: 3\n",
+      "Deleted overlapping event: Maths from 2024-04-20T09:11:50Z to 2024-04-20T09:51:50Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-20T09:56:50Z to 2024-04-20T10:36:50Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-20T10:41:50Z to 2024-04-20T11:21:50Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-20T11:45:00Z to 2024-04-20T12:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-20T12:30:00Z to 2024-04-20T13:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-20T13:15:00Z to 2024-04-20T13:55:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-20T14:00:00Z to 2024-04-20T14:40:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-20T14:45:00Z to 2024-04-20T15:25:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-20T15:30:00Z to 2024-04-20T16:10:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-20T16:15:00Z to 2024-04-20T16:55:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-20T17:00:00Z to 2024-04-20T17:40:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-20T17:45:00Z to 2024-04-20T18:25:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-20T18:30:00Z to 2024-04-20T19:10:00Z.\n",
+      "Total available blocks: 14\n",
       "Number of blocks per subject:\n",
-      "Maths: 3 blocks\n",
-      "Physics: 0 blocks\n",
-      "Computer Science: 0 blocks\n",
-      "Added Maths study block from 2024-04-16 19:11:15.868266+01:00 to 2024-04-16 19:51:15.868266+01:00.\n",
-      "Added Maths study block from 2024-04-16 19:56:15.868266+01:00 to 2024-04-16 20:36:15.868266+01:00.\n",
-      "Added Maths study block from 2024-04-16 20:41:15.868266+01:00 to 2024-04-16 21:21:15.868266+01:00.\n"
+      "Maths: 7 blocks\n",
+      "Physics: 4 blocks\n",
+      "Computer Science: 2 blocks\n",
+      "Added Maths study block from 2024-04-20 10:18:04.745569+01:00 to 2024-04-20 10:58:04.745569+01:00.\n",
+      "Added Maths study block from 2024-04-20 11:03:04.745569+01:00 to 2024-04-20 11:43:04.745569+01:00.\n",
+      "Added Maths study block from 2024-04-20 11:48:04.745569+01:00 to 2024-04-20 12:28:04.745569+01:00.\n",
+      "Added Maths study block from 2024-04-20 12:45:00+01:00 to 2024-04-20 13:25:00+01:00.\n",
+      "Added Maths study block from 2024-04-20 13:30:00+01:00 to 2024-04-20 14:10:00+01:00.\n",
+      "Added Maths study block from 2024-04-20 14:15:00+01:00 to 2024-04-20 14:55:00+01:00.\n",
+      "Added Physics study block from 2024-04-20 15:00:00+01:00 to 2024-04-20 15:40:00+01:00.\n",
+      "Added Physics study block from 2024-04-20 15:45:00+01:00 to 2024-04-20 16:25:00+01:00.\n",
+      "Added Physics study block from 2024-04-20 16:30:00+01:00 to 2024-04-20 17:10:00+01:00.\n",
+      "Added Physics study block from 2024-04-20 17:15:00+01:00 to 2024-04-20 17:55:00+01:00.\n",
+      "Added Computer Science study block from 2024-04-20 18:00:00+01:00 to 2024-04-20 18:40:00+01:00.\n",
+      "Added Computer Science study block from 2024-04-20 18:45:00+01:00 to 2024-04-20 19:25:00+01:00.\n"
      ]
     }
    ],
