allow change of study block length

--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,24 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as dt\n",
     "import pytz\n",
     "\n",
-    "def create_study_plan(service, subjects, num_days, calendar_id=\"primary\"):\n",
-    "    \n",
+    "def create_study_plan(service, subjects, num_days, block_length=40, calendar_id=\"primary\"):\n",
     "    START_TIME = dt.time(9, 0)\n",
-    "    END_TIME = dt.time(21 , 30)\n",
+    "    END_TIME = dt.time(21, 30)\n",
+    "    LUNCH_DURATION = 45  # Duration of lunch break in minutes\n",
     "    \n",
     "    def delete_overlapping_events(start_time, end_time):\n",
     "        \"\"\"Deletes events in the study plan that overlap with the given time range.\"\"\"\n",
     "        events_result = service.events().list(\n",
-    "            calendarId=calendar_id, \n",
+    "            calendarId=calendar_id,\n",
     "            timeMin=start_time.isoformat(),\n",
-    "            timeMax=end_time.isoformat(), \n",
+    "            timeMax=end_time.isoformat(),\n",
     "            singleEvents=True,\n",
     "            orderBy='startTime'\n",
     "        ).execute()\n",
@@ -101,51 +101,54 @@
     "            start_time = pytz.timezone('Europe/London').localize(dt.datetime.combine(study_date, START_TIME))\n",
     "\n",
     "        end_time = pytz.timezone('Europe/London').localize(dt.datetime.combine(study_date, END_TIME))\n",
-    "        lunch_start = pytz.timezone('Europe/London').localize(dt.datetime.combine(study_date, dt.time(12, 00)))\n",
-    "        lunch_end = lunch_start + dt.timedelta(minutes=45)\n",
+    "        lunch_start = pytz.timezone('Europe/London').localize(dt.datetime.combine(study_date, dt.time(12, 0)))\n",
+    "        lunch_end = lunch_start + dt.timedelta(minutes=LUNCH_DURATION)\n",
     "\n",
     "        # Delete overlapping events in the study plan\n",
     "        delete_overlapping_events(start_time, end_time)\n",
     "\n",
-    "        time_available = end_time - max(start_time, now)  # Calculate available study time\n",
+    "        # Calculate the total study time available\n",
+    "        time_available = end_time - max(start_time, now)\n",
     "\n",
-    "        num_blocks_available = int((time_available.total_seconds() / 60) / 45)  # Number of 40-minute blocks available + 5-minute break\n",
-    "\n",
-    "        print(f\"Total available blocks: {num_blocks_available}\")\n",
-    "\n",
-    "        # Check if lunch is still left in the day\n",
+    "        # Calculate the number of study blocks available based on the specified block length\n",
+    "        num_blocks_available = int(time_available.total_seconds() / (block_length * 60))\n",
+    "        \n",
+    "        # Check if lunch is within the study time and account for it\n",
     "        if lunch_start > now:\n",
     "            num_blocks_available -= 1\n",
     "\n",
+    "        # Distribute blocks based on the subject weight\n",
     "        subject_blocks = {subject: int(weight / total_weight * num_blocks_available) for subject, weight in subjects.items()}\n",
     "        \n",
     "        remaining_blocks = num_blocks_available - sum(subject_blocks.values())\n",
     "        \n",
+    "        # Assign remaining blocks to the subject with the highest weight\n",
     "        if remaining_blocks > 0:\n",
-    "            # Add remaining blocks to the subject with the highest weight\n",
     "            max_weight_subject = max(subjects, key=subjects.get)\n",
     "            subject_blocks[max_weight_subject] += remaining_blocks\n",
     "\n",
+    "        # Output the number of blocks per subject\n",
     "        print(\"Number of blocks per subject:\")\n",
     "        for subject, blocks in subject_blocks.items():\n",
     "            print(f\"{subject}: {blocks} blocks\")\n",
     "        \n",
+    "        # Insert events for each subject based on their allocated blocks\n",
     "        for subject, blocks in subject_blocks.items():\n",
     "            for _ in range(blocks):\n",
     "                if start_time >= end_time:\n",
     "                    break\n",
     "                \n",
-    "                # Skip inserting block during lunch\n",
+    "                # Skip inserting block during lunch time\n",
     "                if lunch_start <= start_time < lunch_end:\n",
     "                    start_time = lunch_end\n",
     "                    continue\n",
     "                \n",
-    "                event_end = start_time + dt.timedelta(minutes=40)\n",
+    "                event_end = start_time + dt.timedelta(minutes=block_length)\n",
     "                if event_end > end_time:\n",
     "                    break\n",
     "\n",
     "                event = {\n",
-    "                    \"summary\": f\"{subject}\",\n",
+    "                    \"summary\": subject,\n",
     "                    \"description\": \"Study block generated by study planner - Bill Rimell.\",\n",
     "                    \"start\": {\n",
     "                        \"dateTime\": start_time.isoformat(),\n",
@@ -158,31 +161,32 @@
     "                }\n",
     "                service.events().insert(calendarId=calendar_id, body=event).execute()\n",
     "                print(f\"Added {subject} study block from {start_time} to {event_end}.\")\n",
+    "                \n",
+    "                # 5-minute break between study blocks\n",
+    "                start_time += dt.timedelta(minutes=block_length + 5)\n",
     "\n",
-    "                start_time = event_end + dt.timedelta(minutes=5)  # Next event starts after a gap\n",
-    "        \n",
-    "        # Add lunch block if it's not already added and lunch time is within the available study time\n",
+    "        # Add lunch event if it's within the study time\n",
     "        if lunch_start < end_time and lunch_end > start_time:\n",
     "            lunch_end = min(lunch_end, end_time)\n",
     "            lunch_event = {\n",
     "                \"summary\": \"Lunch\",\n",
     "                \"description\": \"Lunch break generated by study planner - Bill Rimell.\",\n",
-    "                \"start\": {\n",
-    "                    \"dateTime\": lunch_start.isoformat(),\n",
-    "                    \"timeZone\": \"Europe/London\",\n",
-    "                },\n",
-    "                \"end\": {\n",
-    "                    \"dateTime\": lunch_end.isoformat(),\n",
-    "                    \"timeZone\": \"Europe/London\",\n",
-    "                },\n",
-    "            }\n",
+    "                    \"start\": {\n",
+    "                        \"dateTime\": lunch_start.isoformat(),\n",
+    "                        \"timeZone\": \"Europe/London\",\n",
+    "                    },\n",
+    "                    \"end\": {\n",
+    "                        \"dateTime\": lunch_end.isoformat(),\n",
+    "                        \"timeZone\": \"Europe/London\",\n",
+    "                    },\n",
+    "                }\n",
     "            service.events().insert(calendarId=calendar_id, body=lunch_event).execute()\n",
     "            print(f\"Added lunch break from {lunch_start} to {lunch_end}.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,51 +195,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted overlapping event: Maths from 2024-04-20T09:11:50Z to 2024-04-20T09:51:50Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-20T09:56:50Z to 2024-04-20T10:36:50Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-20T10:41:50Z to 2024-04-20T11:21:50Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-20T11:45:00Z to 2024-04-20T12:25:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-20T12:30:00Z to 2024-04-20T13:10:00Z.\n",
-      "Deleted overlapping event: Maths from 2024-04-20T13:15:00Z to 2024-04-20T13:55:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-20T14:00:00Z to 2024-04-20T14:40:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-20T14:45:00Z to 2024-04-20T15:25:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-20T15:30:00Z to 2024-04-20T16:10:00Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-20T16:15:00Z to 2024-04-20T16:55:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-20T17:00:00Z to 2024-04-20T17:40:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-20T17:45:00Z to 2024-04-20T18:25:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-20T18:30:00Z to 2024-04-20T19:10:00Z.\n",
-      "Total available blocks: 14\n",
+      "Deleted overlapping event: Maths from 2024-04-27T11:45:00Z to 2024-04-27T12:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T12:30:00Z to 2024-04-27T13:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T13:15:00Z to 2024-04-27T13:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T14:00:00Z to 2024-04-27T14:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T14:45:00Z to 2024-04-27T15:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T15:30:00Z to 2024-04-27T16:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T16:15:00Z to 2024-04-27T16:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T17:00:00Z to 2024-04-27T17:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T17:45:00Z to 2024-04-27T18:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T18:30:00Z to 2024-04-27T19:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-27T19:15:00Z to 2024-04-27T19:55:00Z.\n",
       "Number of blocks per subject:\n",
-      "Maths: 7 blocks\n",
-      "Physics: 4 blocks\n",
-      "Computer Science: 2 blocks\n",
-      "Added Maths study block from 2024-04-20 10:18:04.745569+01:00 to 2024-04-20 10:58:04.745569+01:00.\n",
-      "Added Maths study block from 2024-04-20 11:03:04.745569+01:00 to 2024-04-20 11:43:04.745569+01:00.\n",
-      "Added Maths study block from 2024-04-20 11:48:04.745569+01:00 to 2024-04-20 12:28:04.745569+01:00.\n",
-      "Added Maths study block from 2024-04-20 12:45:00+01:00 to 2024-04-20 13:25:00+01:00.\n",
-      "Added Maths study block from 2024-04-20 13:30:00+01:00 to 2024-04-20 14:10:00+01:00.\n",
-      "Added Maths study block from 2024-04-20 14:15:00+01:00 to 2024-04-20 14:55:00+01:00.\n",
-      "Added Physics study block from 2024-04-20 15:00:00+01:00 to 2024-04-20 15:40:00+01:00.\n",
-      "Added Physics study block from 2024-04-20 15:45:00+01:00 to 2024-04-20 16:25:00+01:00.\n",
-      "Added Physics study block from 2024-04-20 16:30:00+01:00 to 2024-04-20 17:10:00+01:00.\n",
-      "Added Physics study block from 2024-04-20 17:15:00+01:00 to 2024-04-20 17:55:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-20 18:00:00+01:00 to 2024-04-20 18:40:00+01:00.\n",
-      "Added Computer Science study block from 2024-04-20 18:45:00+01:00 to 2024-04-20 19:25:00+01:00.\n"
+      "Maths: 4 blocks\n",
+      "Physics: 0 blocks\n",
+      "Computer Science: 0 blocks\n",
+      "Added Maths study block from 2024-04-27 12:45:00+01:00 to 2024-04-27 14:45:00+01:00.\n",
+      "Added Maths study block from 2024-04-27 14:50:00+01:00 to 2024-04-27 16:50:00+01:00.\n",
+      "Added Maths study block from 2024-04-27 16:55:00+01:00 to 2024-04-27 18:55:00+01:00.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T08:00:00Z to 2024-04-28T08:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T08:45:00Z to 2024-04-28T09:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T09:30:00Z to 2024-04-28T10:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T10:15:00Z to 2024-04-28T10:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T11:45:00Z to 2024-04-28T12:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T12:30:00Z to 2024-04-28T13:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T13:15:00Z to 2024-04-28T13:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T14:00:00Z to 2024-04-28T14:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T14:45:00Z to 2024-04-28T15:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T15:30:00Z to 2024-04-28T16:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T16:15:00Z to 2024-04-28T16:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T17:00:00Z to 2024-04-28T17:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T17:45:00Z to 2024-04-28T18:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-28T18:30:00Z to 2024-04-28T19:10:00Z.\n",
+      "Number of blocks per subject:\n",
+      "Maths: 5 blocks\n",
+      "Physics: 0 blocks\n",
+      "Computer Science: 0 blocks\n",
+      "Added Maths study block from 2024-04-28 09:00:00+01:00 to 2024-04-28 11:00:00+01:00.\n",
+      "Added Maths study block from 2024-04-28 11:05:00+01:00 to 2024-04-28 13:05:00+01:00.\n",
+      "Added Maths study block from 2024-04-28 13:10:00+01:00 to 2024-04-28 15:10:00+01:00.\n"
      ]
     }
    ],
    "source": [
     "service = authenticate_google_calendar()\n",
     "\n",
-    "subjects = {'Maths': 150, 'Physics': 100, 'Computer Science': 70}  # Example subjects with weights\n",
-    "create_study_plan(service=service, subjects=subjects, num_days=1, calendar_id=calendar_id)  # Specify your calendar ID\n"
+    "subjects = {'Maths': 150, 'Physics': 0, 'Computer Science': 0}  # Example subjects with weights\n",
+    "create_study_plan(service=service, subjects=subjects, num_days=2, block_length=120, calendar_id=calendar_id)  # Specify your calendar ID\n"
    ]
   }
  ],
