--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -240,7 +240,9 @@
       "Computer Science: 0 blocks\n",
       "Added Maths study block from 2024-04-28 09:00:00+01:00 to 2024-04-28 11:00:00+01:00.\n",
       "Added Maths study block from 2024-04-28 11:05:00+01:00 to 2024-04-28 13:05:00+01:00.\n",
-      "Added Maths study block from 2024-04-28 13:10:00+01:00 to 2024-04-28 15:10:00+01:00.\n"
+      "Added Maths study block from 2024-04-28 13:10:00+01:00 to 2024-04-28 15:10:00+01:00.\n",
+      "Added Maths study block from 2024-04-28 15:15:00+01:00 to 2024-04-28 17:15:00+01:00.\n",
+      "Added Maths study block from 2024-04-28 17:20:00+01:00 to 2024-04-28 19:20:00+01:00.\n"
      ]
     }
    ],
